# mlx-llm.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  transformer.cpp  transformer.h
example/: main.cpp
mlx/: activations.cpp  base.cpp  base.h  embedding.cpp  embedding.h  linear.cpp  linear.h  quantized.cpp  quantized.h  transformer.h
model/: converter.cpp  converter.h  registry.cpp  registry.h  transformer.cpp  transformer.h  utils.cpp  utils.h
prompt/: llama.h
test/: main.cpp  test_model.safetensors
